Fixed css of search input

--- a/styling/bootstrap-chosen.less
+++ b/styling/bootstrap-chosen.less
@@ -194,7 +194,7 @@
 
   .chosen-search {
     margin: 0;
-    padding: 3px 4px;
+    padding: 3px 30px 3px 4px;
     position: relative;
     white-space: nowrap;
     z-index: @zindex-dropdown;
